# owui_mcp

./: .gitignore  .mcpbignore  README.md  manifest.json  pyproject.toml
.github/workflows/: release-mcpb.yml
src/owui_client/: __init__.py  client.py
src/owui_client/models/: access_grants.py  analytics.py  audio.py  auths.py  automations.py  calendar.py  channels.py  chat_messages.py  chats.py  configs.py  evaluations.py  feedbacks.py  files.py  folders.py  functions.py  groups.py  images.py  knowledge.py  models.py  notes.py  ollama.py  openai.py  prompts.py  retrieval.py  scim.py  skills.py  tasks.py  terminals.py  tools.py  users.py
src/owui_client/routers/: analytics.py  auths.py  automations.py  calendar.py  channels.py  chats.py  configs.py  evaluations.py  files.py  groups.py  knowledge.py  memories.py  models.py  notes.py  ollama.py  openai.py  prompts.py  scim.py  skills.py  tasks.py  terminals.py  tools.py
src/owui_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
