[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owui-mcp"
version = "1.8.1"
description = "MCP server exposing the Open WebUI API via owui_client."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["open-webui", "mcp", "model-context-protocol"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastmcp[code-mode]>=3.1.0",
]

[project.scripts]
owui-mcp = "owui_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/owui_mcp", "src/owui_client"]

[tool.hatch.build.targets.sdist]
include = ["src/owui_mcp", "src/owui_client"]
